# modular

./: .CMakeLists.txt.swp  .gitignore  .singularhistory  CMakeCache.txt  CMakeLists.txt  README.md  gpispacemod.sing  install.sh  modular.xpnet
cmake/modules/: FindSingular.cmake
error/framework-mod/: CMakeLists.txt  install.sh
error/framework-mod/examples/: modulargp.lib
error/framework-mod/modular/: CMakeLists.txt  implementation.cpp  singular_functions.cpp  singular_functions.hpp
error/framework-mod/modular/LIB/: modulargspc.lib
error/framework-mod/share/include/: modular_interface.hpp
error/framework-mod/src/: installation.cpp  installation.hpp.in
error/framework-mod/workflow/: modular.xpnet
error/run_mod/: .singularhistory  modulargp.lib  modulargspc.lib  run_modular.sh  run_modular.sing
error/run_mod/temp/: .singularhistory
examples/: .singularhistory  example_from_central_configuration.sing  example_singularity.sing  loghostfile  modimage.lib  modularImage.lib  modulargp.lib  modulargspc.lib  new_run_modular.sing  run_image.sh  run_image.sing  run_modular.sh  run_modular.sing
examples/temp/: Dell3501_30980_1680110563426427946Dell3501 30980  Dell3501_30980_1680110564978701072Dell3501 30980  Dell3501_30980_1680110566378991731Dell3501 30980  Dell3501_30980_1680110567421112629Dell3501 30980  Dell3501_30980_1680110567469629605Dell3501 30980  Dell3501_30980_1680110567521420082Dell3501 30980  Dell3501_30980_1680110568556063479Dell3501 30980  Dell3501_30980_1680110569115712107Dell3501 30980  Dell3501_30980_1680110569131896849Dell3501 30980  Dell3501_30980_1680110569789089736Dell3501 30980  Dell3501_30980_1680110569826655173Dell3501 30980  Dell3501_30980_1680110570498865149Dell3501 30980  Dell3501_30980_1680110571492735086Dell3501 30980  Dell3501_30980_1680110572365427809  Dell3501_30980_1680110572370183683Dell3501 30980  Dell3501_30980_1680110574480121600  Dell3501_30980_1680110574496256497Dell3501 30980  Dell3501_30980_1680110575131405078Dell3501 30980  Dell3501_30980_1680110575586967208Dell3501 30980  Dell3501_30980_1680110575597134146Dell3501 30980  Dell3501_30980_1680110576230280067Dell3501 30980  Dell3501_30980_1680110576942595413Dell3501 30980  Dell3501_30980_1680110576955543484Dell3501 30980  Dell3501_30980_1680110579931738424  Dell3501_30980_1680110579940202408  Dell3501_30980_1680110579945228964Dell3501 30980  Dell3501_30980_1680110579953183901Dell3501 30980  Dell3501_30980_1680110580816721740Dell3501 30980  Dell3501_30980_1680110581505381859Dell3501 30980  Dell3501_30980_1680110581512511714Dell3501 30980  Dell3501_30980_1680110582178835070Dell3501 30980  Dell3501_30980_1680110582191909411Dell3501 30980  Dell3501_30980_1680110582865821413Dell3501 30980  Dell3501_30980_1680110583727520173Dell3501 30980  Dell3501_30980_1680110583762429452Dell3501 30980  Dell3501_30980_1680110583779957604Dell3501 30980  Dell3501_30980_1680110584635949103Dell3501 30980  Dell3501_30980_1680110584667608142  Dell3501_30980_1680110584670821851Dell3501 30980  Dell3501_30980_1680110584680483374Dell3501 30980  (+2316 more)
framework_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  modular.pnet
framework_build/cmake/: Makefile  cmake_install.cmake
framework_build/gen_modular.pnet/: Makefile  Makefile.CXXFLAGS  Makefile.LDFLAGS  Makefile.LDFLAGS_singular_modular
framework_build/gen_modular.pnet/pnetc/op/: singular_modular.cpp
framework_build/gen_modular.pnet/pnetc/op/singular_modular/: compute.cpp  compute.d  compute.hpp  counting2.cpp  counting2.d  counting2.hpp  init.cpp  init.d  init.hpp  lift.cpp  lift.d  lift.hpp  lift1.cpp  lift1.d  lift1.hpp  lift2.cpp  lift2.d  lift2.hpp  lift3.cpp  lift3.d  lift3.hpp  move.cpp  move.d  move.hpp  reconstest.cpp  reconstest.cpp~  reconstest.d  reconstest.hpp
framework_build/gen_modular.pnet/pnetc/type/: mod_input_data.hpp  modular_data.hpp  result_bool_type.hpp
framework_build/gen_modular.pnet/pnetc/type/mod_input_data/: op.cpp  op.d  op.hpp
framework_build/gen_modular.pnet/pnetc/type/modular_data/: op.cpp  op.d  op.hpp
framework_build/gen_modular.pnet/pnetc/type/result_bool_type/: op.cpp  op.d  op.hpp
framework_build/modular/: Makefile  cmake_install.cmake
framework_build/src/: installation.hpp
framework_build/src/util-generic/: Makefile  cmake_install.cmake
framework_build/workflow/: Makefile  cmake_install.cmake
modular/: .singularhistory  CMakeLists.txt  implementation.cpp  singular_functions.cpp  singular_functions.hpp
modular/LIB/: modulargspc.lib
share/include/: modular_interface.hpp
singular/: CMakeLists.txt  run.sh
singular/src/: .singularhistory  functions.cpp  functions.hpp  implementations.cpp  input.ssi  main.cpp  modulargp.lib
src/: .singularhistory  CMakeLists.txt  installation.hpp.in
src/workflow/: CMakeLists.txt  modular.xpnet
workflow/: .modular.xpnet.swp  CMakeLists.txt  lift.xpnet  lift1.xpnet  lift1bis.xpnet  lift1new.xpnet  lift2.xpnet  liftAdd.xpnet  modular.xpnet  newlift.xpnet  parallel_compatible.xpnet  parallel_farey.xpnet  reconstest.xpnet  structures.xpnet
